test : add service tests